# django-mail-builder

./: .readthedocs.yaml  .travis.yml  README.md  pyproject.toml
mail_builder/: builder.py
mail_builder/templatetags/: mailbuilder.py
tests/: settings.py  test_builder.py  test_views.py  urls.py  views.py
